--- a/HelloMaven/test-output/old/Annotation/methods.html
+++ b/HelloMaven/test-output/old/Annotation/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Annotation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7ac8f">  <td>23/01/11 02:21:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationSample.methodTest(int,int)[pri:0, instance:selenium.AnnotationSample@44c03695]">methodTest</td> 
+<tr bgcolor="afeb71">  <td>23/09/28 22:38:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationSample.methodTest(int,int)[pri:0, instance:selenium.AnnotationSample@5c671d7f]">methodTest</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>23/01/11 02:21:22</td>   <td>32</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationSample.aft()[pri:0, instance:selenium.AnnotationSample@44c03695]">&lt;&lt;aft</td> 
+<tr bgcolor="afeb71">  <td>23/09/28 22:38:10</td>   <td>-35</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationSample.bt()[pri:0, instance:selenium.AnnotationSample@5c671d7f]">&gt;&gt;bt</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>23/01/11 02:21:22</td>   <td>-31</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationSample.bt()[pri:0, instance:selenium.AnnotationSample@44c03695]">&gt;&gt;bt</td> 
+<tr bgcolor="afeb71">  <td>23/09/28 22:38:10</td>   <td>34</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationSample.aft()[pri:0, instance:selenium.AnnotationSample@5c671d7f]">&lt;&lt;aft</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="9fedbd">  <td>23/01/11 02:21:22</td>   <td>139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClassA.method()[pri:0, instance:selenium.ClassA@8297b3a]">method</td> 
-  <td>TestNG-test=Find Element-2@1632413663</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>23/01/11 02:21:22</td>   <td>139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClassB.method1()[pri:0, instance:selenium.ClassB@7817fd62]">method1</td> 
-  <td>TestNG-test=Find Element-1@2122049087</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>23/01/11 02:22:40</td>   <td>77396</td> <td title="&lt;&lt;AnnotationSample.afs()[pri:0, instance:selenium.AnnotationSample@44c03695]">&lt;&lt;afs</td> 
+<tr bgcolor="96bacf">  <td>23/09/28 22:38:11</td>   <td>198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClassA.method()[pri:0, instance:selenium.ClassA@740773a3]">method</td> 
+  <td>TestNG-test=Find Element-2@2032079962</td>   <td></td> </tr>
+<tr bgcolor="71b7a8">  <td>23/09/28 22:38:11</td>   <td>199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClassB.method1()[pri:0, instance:selenium.ClassB@7748410a]">method1</td> 
+  <td>TestNG-test=Find Element-1@1183231938</td>   <td></td> </tr>
+<tr bgcolor="afeb71">  <td>23/09/28 22:38:34</td>   <td>23507</td> <td title="&lt;&lt;AnnotationSample.afs()[pri:0, instance:selenium.AnnotationSample@5c671d7f]">&lt;&lt;afs</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="7bddad">  <td>23/01/11 02:22:27</td>   <td>64212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Alertexample.method1()[pri:0, instance:selenium.Alertexample@d35dea7]">method1</td> 
+<tr bgcolor="afeb71">  <td>23/09/28 22:38:10</td>   <td>-50</td> <td title="&gt;&gt;AnnotationSample.bs()[pri:0, instance:selenium.AnnotationSample@5c671d7f]">&gt;&gt;bs</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b4a39d">  <td>23/09/28 22:38:25</td>   <td>14618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Alertexample.method1()[pri:0, instance:selenium.Alertexample@1018bde2]">method1</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="b7ac8f">  <td>23/01/11 02:21:22</td>   <td>-45</td> <td title="&gt;&gt;AnnotationSample.bs()[pri:0, instance:selenium.AnnotationSample@44c03695]">&gt;&gt;bs</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
 </table>
